--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
+*, ::before, ::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #f1f1f1;
+  background: linear-gradient(45deg, rgb(50,50,50), rgb(22,28,29));
+  height: 100vh;
+}
+
 #myMap {
     width: 100%;
-    height: 500px;
+    height: 100%;
 }
